@@ -2,6 +2,10 @@
 
 Memcached::libmemcached::Changes - List of significant changes
 
+=head2 Changes in 0.4405 29th Oct 2010
+
+  Fix crash if memcached_callback_get(MEMCACHED_CALLBACK_PREFIX_KEY) returns NULL.
+
 =head2 Changes in 0.4404 28th Oct 2010
 
   Added memcached_callback_set() to enable MEMCACHED_CALLBACK_PREFIX_KEY.
